# ifood-case-analytics

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_exploracao_ab.ipynb  02_segmentacao.ipynb
src/ifood_case/: config.py  load_data.py  transform.py  utils.py
