[project]
name = "ifood-case-analytics"
version = "0.1.0"
description = "Análise de Teste A/B e Segmentação - Case iFood"
authors = [
    {name = "Gabriel Simões de Souza",email = "g.simoes91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyspark (==3.5.3)",
    "pandas (>=2.2.0,<3.0.0)",
    "pyarrow (>=15.0.0)",
    "loguru (>=0.7.2)",
    "python-dotenv (>=1.0.0)",
    "requests (>=2.31.0)"
]

[tool.poetry]   
packages = [{include = "ifood_case", from = "src"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
